JetBrains IDEA plugin working

--- a/Chap01a.ipynb
+++ b/Chap01a.ipynb
@@ -23,17 +23,20 @@
      "hide_output_from_viewers": true,
      "node_id": "csmxvEZTu3wOSgKSkgJGxQ",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:44:59.105977829Z",
+     "start_time": "2023-07-22T01:44:58.428889269Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "1.8.20"
-      ]
+      "text/plain": "1.8.20"
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -49,6 +52,10 @@
      "hide_output_from_viewers": true,
      "node_id": "DhePRkhgMkZJRyvM9UKY4W",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:00.117017011Z",
+     "start_time": "2023-07-22T01:44:58.974466367Z"
     }
    },
    "outputs": [
@@ -73,6 +80,10 @@
      "hide_output_from_viewers": true,
      "node_id": "dYKniKFw8GBGuGOskpyzQR",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.518450183Z",
+     "start_time": "2023-07-22T01:44:59.620845513Z"
     }
    },
    "outputs": [],
@@ -103,6 +114,10 @@
      "hide_output_from_viewers": true,
      "node_id": "C1WrTGYT7GBOZ9fLj12iqG",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.656977375Z",
+     "start_time": "2023-07-22T01:45:00.006266772Z"
     }
    },
    "outputs": [
@@ -180,6 +195,10 @@
      "hide_output_from_viewers": true,
      "node_id": "zI5PoFf0UIUANRLkqjj9cI",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.719168993Z",
+     "start_time": "2023-07-22T01:45:00.295986028Z"
     }
    },
    "outputs": [],
@@ -196,6 +215,10 @@
      "hide_output_from_viewers": true,
      "node_id": "6JxPO03UaVz0vNaEFtbqk8",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.883881897Z",
+     "start_time": "2023-07-22T01:45:00.665654883Z"
     }
    },
    "outputs": [
@@ -203,17 +226,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_14.jupyter.kts (1:1 - 4) Val cannot be reassigned"
-     ]
-    },
-    {
-     "ename": "Syntax Error",
-     "evalue": "Syntax Error: Val cannot be reassigned",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------",
-      "Traceback (most recent call last)",
-      "Syntax Error: Val cannot be reassigned"
+      "Line_6.jupyter.kts (1:1 - 4) Val cannot be reassigned"
      ]
     }
    ],
@@ -230,6 +243,9 @@
      "hide_output_from_viewers": true,
      "node_id": "KDW82U7GeAiTUTedSyyI6D",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-07-22T01:45:01.009374921Z"
     }
    },
    "outputs": [
@@ -237,17 +253,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_21.jupyter.kts (1:1 - 4) Val cannot be reassigned"
-     ]
-    },
-    {
-     "ename": "Syntax Error",
-     "evalue": "Syntax Error: Val cannot be reassigned",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------",
-      "Traceback (most recent call last)",
-      "Syntax Error: Val cannot be reassigned"
+      "Line_7.jupyter.kts (1:1 - 4) Val cannot be reassigned"
      ]
     }
    ],
@@ -278,6 +284,10 @@
      "hide_output_from_viewers": true,
      "node_id": "UW74P8YTxlaUSpgyCQMoYB",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:02.595866789Z",
+     "start_time": "2023-07-22T01:45:01.170296179Z"
     }
    },
    "outputs": [],
@@ -295,17 +305,20 @@
      "hide_output_from_viewers": true,
      "node_id": "dL5xrY6u73pHbQ1vzFmCnO",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:03.029880645Z",
+     "start_time": "2023-07-22T01:45:01.505565436Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "class kotlin.Int"
-      ]
+      "text/plain": "class kotlin.Int"
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -321,17 +334,20 @@
      "hide_output_from_viewers": true,
      "node_id": "dO4mgySLe5k57QYpMDNQrL",
      "type": "CODE"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:03.073790050Z",
+     "start_time": "2023-07-22T01:45:01.873556216Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "class kotlin.String"
-      ]
+      "text/plain": "class kotlin.String"
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -500,12 +516,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.12345123451234512"
-      ]
+      "text/plain": "0.12345123451234512"
      },
+     "execution_count": 16,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -526,12 +541,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "true"
-      ]
+      "text/plain": "true"
      },
+     "execution_count": 17,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -552,12 +566,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.12345123"
-      ]
+      "text/plain": "0.12345123"
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -578,12 +591,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "true"
-      ]
+      "text/plain": "true"
      },
+     "execution_count": 19,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -606,17 +618,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_47.jupyter.kts (1:1 - 9) Operator '==' cannot be applied to 'Double' and 'Float'"
-     ]
-    },
-    {
-     "ename": "Syntax Error",
-     "evalue": "Syntax Error: Operator '==' cannot be applied to 'Double' and 'Float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------",
-      "Traceback (most recent call last)",
-      "Syntax Error: Operator '==' cannot be applied to 'Double' and 'Float'"
+      "Line_20.jupyter.kts (1:1 - 9) Operator '==' cannot be applied to 'Double' and 'Float'"
      ]
     }
    ],
@@ -638,12 +640,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "true"
-      ]
+      "text/plain": "true"
      },
+     "execution_count": 21,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -664,12 +665,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "false"
-      ]
+      "text/plain": "false"
      },
+     "execution_count": 22,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -738,12 +738,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "false"
-      ]
+      "text/plain": "false"
      },
+     "execution_count": 24,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -764,12 +763,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "true"
-      ]
+      "text/plain": "true"
      },
+     "execution_count": 25,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -790,12 +788,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "false"
-      ]
+      "text/plain": "false"
      },
+     "execution_count": 26,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -816,12 +813,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "false"
-      ]
+      "text/plain": "false"
      },
+     "execution_count": 27,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -952,12 +948,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "true"
-      ]
+      "text/plain": "true"
      },
+     "execution_count": 32,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1032,15 +1027,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "\n",
-       "Sum of  3\n",
-       "    and 4\n",
-       "is      7\n"
-      ]
+      "text/plain": "\nSum of  3\n    and 4\nis      7\n"
      },
+     "execution_count": 35,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1075,6 +1066,9 @@
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
    "version": "1.8.20-Beta"
+  },
+  "ktnbPluginMetadata": {
+   "isAddProjectLibrariesToClasspath": false
   }
  },
  "nbformat": 4,
