--- a/Chap01b.ipynb
+++ b/Chap01b.ipynb
@@ -44,14 +44,18 @@
      "node_id": "Yd7txd1EdPYNaL80osvg70",
      "type": "CODE"
     },
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:46:11.511417973Z",
+     "start_time": "2023-07-22T01:46:10.926843768Z"
+    }
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_0.jupyter.kts (1:19 - 23) Null can not be a value of a non-null type String"
+      "Line_1.jupyter.kts (1:19 - 23) Null can not be a value of a non-null type String"
      ]
     }
    ],
@@ -69,7 +73,11 @@
      "node_id": "UjNJ9dwF3LmlIfcyogLOWE",
      "type": "CODE"
     },
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:46:12.262078293Z",
+     "start_time": "2023-07-22T01:46:11.379283618Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -93,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_2.jupyter.kts (1:6 - 10) Null can not be a value of a non-null type String"
+      "Line_3.jupyter.kts (1:6 - 10) Null can not be a value of a non-null type String"
      ]
     }
    ],
@@ -116,9 +124,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "5"
-      ]
+      "text/plain": "5"
      },
      "execution_count": 4,
      "metadata": {},
@@ -179,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_5.jupyter.kts (2:28 - 29) Only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?"
+      "Line_6.jupyter.kts (2:28 - 29) Only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?"
      ]
     }
    ],
@@ -357,9 +363,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "default value"
-      ]
+      "text/plain": "default value"
      },
      "execution_count": 11,
      "metadata": {},
@@ -385,9 +389,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "non-null value"
-      ]
+      "text/plain": "non-null value"
      },
      "execution_count": 12,
      "metadata": {},
@@ -433,7 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_20.jupyter.kts (2:24 - 29) Type mismatch: inferred type is Int but Double was expected"
+      "Line_21.jupyter.kts (2:24 - 29) Type mismatch: inferred type is Int but Double was expected"
      ]
     }
    ],
@@ -537,14 +539,13 @@
      "text": [
       "For input string: \"#125\"\n",
       "java.lang.NumberFormatException: For input string: \"#125\"\n",
-      "\tat java.base/java.lang.NumberFormatException.forInputString(NumberFormatException.java:65)\n",
-      "\tat java.base/java.lang.Integer.parseInt(Integer.java:638)\n",
-      "\tat java.base/java.lang.Integer.parseInt(Integer.java:770)\n",
-      "\tat Line_24_jupyter.<init>(Line_24.jupyter.kts:2)\n",
-      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:490)\n",
+      "\tat java.base/java.lang.NumberFormatException.forInputString(NumberFormatException.java:67)\n",
+      "\tat java.base/java.lang.Integer.parseInt(Integer.java:654)\n",
+      "\tat java.base/java.lang.Integer.parseInt(Integer.java:784)\n",
+      "\tat Line_25_jupyter.<init>(Line_25.jupyter.kts:2)\n",
+      "\tat java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:67)\n",
+      "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)\n",
+      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:483)\n",
       "\tat kotlin.script.experimental.jvm.BasicJvmScriptEvaluator.evalWithConfigAndOtherScriptsResults(BasicJvmScriptEvaluator.kt:105)\n",
       "\tat kotlin.script.experimental.jvm.BasicJvmScriptEvaluator.invoke$suspendImpl(BasicJvmScriptEvaluator.kt:47)\n",
       "\tat kotlin.script.experimental.jvm.BasicJvmScriptEvaluator.invoke(BasicJvmScriptEvaluator.kt)\n",
@@ -561,13 +562,13 @@
       "\tat org.jetbrains.kotlinx.jupyter.repl.impl.InternalEvaluatorImpl.eval(InternalEvaluatorImpl.kt:103)\n",
       "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl$execute$1$result$1.invoke(CellExecutorImpl.kt:75)\n",
       "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl$execute$1$result$1.invoke(CellExecutorImpl.kt:73)\n",
-      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl.withHost(repl.kt:658)\n",
+      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl.withHost(repl.kt:666)\n",
       "\tat org.jetbrains.kotlinx.jupyter.repl.impl.CellExecutorImpl.execute(CellExecutorImpl.kt:73)\n",
       "\tat org.jetbrains.kotlinx.jupyter.repl.CellExecutor$DefaultImpls.execute$default(CellExecutor.kt:15)\n",
-      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl$evalEx$1.invoke(repl.kt:471)\n",
-      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl$evalEx$1.invoke(repl.kt:462)\n",
-      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl.withEvalContext(repl.kt:425)\n",
-      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl.evalEx(repl.kt:462)\n",
+      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl$evalEx$1.invoke(repl.kt:479)\n",
+      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl$evalEx$1.invoke(repl.kt:470)\n",
+      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl.withEvalContext(repl.kt:433)\n",
+      "\tat org.jetbrains.kotlinx.jupyter.ReplForJupyterImpl.evalEx(repl.kt:470)\n",
       "\tat org.jetbrains.kotlinx.jupyter.messaging.ProtocolKt$shellMessagesHandler$2$res$1.invoke(protocol.kt:318)\n",
       "\tat org.jetbrains.kotlinx.jupyter.messaging.ProtocolKt$shellMessagesHandler$2$res$1.invoke(protocol.kt:312)\n",
       "\tat org.jetbrains.kotlinx.jupyter.JupyterExecutorImpl$runExecution$execThread$1.invoke(execution.kt:37)\n",
@@ -653,7 +654,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_26.jupyter.kts (6:14 - 23) Smart cast to 'String' is impossible, because 'mayBeNull' is a mutable property that could have been changed by this time"
+      "Line_27.jupyter.kts (6:14 - 23) Smart cast to 'String' is impossible, because 'mayBeNull' is a mutable property that could have been changed by this time"
      ]
     }
    ],
@@ -787,9 +788,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Hello"
-      ]
+      "text/plain": "Hello"
      },
      "execution_count": 23,
      "metadata": {},
@@ -869,9 +868,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Hello"
-      ]
+      "text/plain": "Hello"
      },
      "execution_count": 27,
      "metadata": {},
@@ -897,9 +894,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "null"
-      ]
+      "text/plain": "null"
      },
      "execution_count": 28,
      "metadata": {},
@@ -925,9 +920,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "null"
-      ]
+      "text/plain": "null"
      },
      "execution_count": 29,
      "metadata": {},
@@ -1067,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": true,
@@ -1104,6 +1097,9 @@
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
    "version": "1.8.20-Beta"
+  },
+  "ktnbPluginMetadata": {
+   "isAddProjectLibrariesToClasspath": false
   }
  },
  "nbformat": 4,
