--- a/Chap04a.ipynb
+++ b/Chap04a.ipynb
@@ -364,6 +364,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1eb1c280-1730-4cfe-8d61-b78c929fa657",
+   "metadata": {},
+   "source": [
+    "### The enum class and interfaces\n",
+    "이 부분도 sealed class와 object를 알고 와서 다시 읽어보면 이해가 잘 될 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "96d02464-6d44-4068-844a-8f63f83175ef",
    "metadata": {},
    "source": [
@@ -447,32 +456,433 @@
    "id": "c9bebeea-f552-45cf-bbbe-22302ab04c07",
    "metadata": {},
    "source": [
-    "## Objects"
+    "## Objects and companion objects\n",
+    "어떤 클래스의 인스턴스가 유일무이한 경우 그런 클래스를 싱글턴 클래스 그리고 그런 객체를 싱글톤 객체라고 부른다.\n",
+    "\n",
+    "코틀린에서는 싱글톤 객체를 간단히 정의할 수 있는 `object` 키워드를 제공"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ea87a4a7-ee3f-4172-ad8f-1071397bbeca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "object MyButton { // 프로그램 전체에 딱 하나만 있는 버튼\n",
+    "    var count = 0\n",
+    "    fun click() = println(\"clicked ${++count} times\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "60716f64-9929-443f-9f31-e94c0e801717",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// class 이름의 역할도 하면서 유일무이한 object를 참조하는 이름 역할도 함\n",
+    "MyButton is MyButton "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f72852b9-d8ea-4481-b07d-9a916dff5337",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clicked 1 times\n",
+      "clicked 2 times\n",
+      "clicked 3 times\n"
+     ]
+    }
+   ],
+   "source": [
+    "MyButton.click()\n",
+    "MyButton.click()\n",
+    "MyButton.click()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60293813-d83f-4d73-ade9-9d7233e2023e",
+   "metadata": {},
+   "source": [
+    "### The object class with inheritance and interfaces\n",
+    "\n",
+    "이 책에서는 `object` 키워드로 싱글톤이 클래스로 역할을 할 때 object class라고 부르고 있는 것 같다.\n",
+    "\n",
+    "object로 선언하는 클래스도 일반 class와 마찬가지로 클래스 상속이나 인터페이스를 활용하며 선언할 수 있다.\n",
+    "\n",
+    "책에 있는 것보다 훨씬 더 좋은 예시는 enum class의 기능을 `sealed`와 `object`로 대신 표현해 보는 것이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5c88db8b-68f8-4baa-b941-8a5954cb8c8e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "// enum CardSuit { CLUB, DIAMOND, HEART, SPADE } 대신에 비슷하게 아래와 같이\n",
+    "sealed class CardSuit {\n",
+    "    object CLUB:    CardSuit() { override fun toString() = \"CLUB\"    }\n",
+    "    object DIAMOND: CardSuit() { override fun toString() = \"DIAMOND\" }\n",
+    "    object HEART:   CardSuit() { override fun toString() = \"HEART\" }\n",
+    "    object SPADE:   CardSuit() { override fun toString() = \"SPADE\" }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "eb307e78-cbb2-4d6f-b8cd-5cd3a5496c23",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CLUB"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CardSuit.CLUB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "333f07b4-280a-4543-848d-afef499443bc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CardSuit.CLUB is CardSuit // CLUB은 CardSuit 타입이다 (상위 클래스니까)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "01adde3d-d80a-4f10-9cdc-4304c02d45de",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CardSuit.CLUB is CardSuit.CLUB // CLUB은 CLUB 타입이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e65c5e8d-da1e-42bb-b2da-b18a35f1b521",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Days.SUN is Days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cc8e5c2d-a34e-4710-a7b8-b0f82c086aa3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_24.jupyter.kts (1:13 - 21) 'is' over enum entry is not allowed, use comparison instead\n",
+      "Line_24.jupyter.kts (1:18 - 21) Use of enum entry names as types is not allowed, use enum type instead"
+     ]
+    }
+   ],
+   "source": [
+    "Days.SUN is Days.SUN // 진짜 enum 상수는 클래스 역할은 하지 못하는 등 세부적인 차이가 있기는 함"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "36c737b3-a0df-4296-8caa-802fe3b9751e",
    "metadata": {},
    "source": [
-    "## Companion objects"
+    "### Companion objects\n",
+    "클래스 안에 있는 오브젝트이지만 이름 없이 투명해서 클래스를 통해서 직접 속성/함수에 접근 가능\n",
+    "\n",
+    "Java의 경우 클래스 안에서 static으로 선언하는 클래스 속성 및 클래스 메소드에 해당하는 기능을 Kotlin에서 작성할 때 활용 가능\n",
+    "\n",
+    "Java의 클래스 속성/메소드와 차이점은 Kotlin의 companion object는 \n",
+    "- class의 역할도 하므로 클래스 상속이나 인터페이스와 함께 선언 가능\n",
+    "- 클래스 이름으로만 접근 가능하고 인스턴스를 통해서는 접근 불가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "59803f13-fc09-49f1-9ac3-10537a70b92a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class ObjVsCompanionObj {\n",
+    "    object NotCompanion {\n",
+    "        val prop = 1\n",
+    "        init { println(\"initializing NotCompanion object\") }\n",
+    "    }\n",
+    "    companion object { // 기본적으로 이름은 Companion\n",
+    "        val prop = 2\n",
+    "        init { println(\"initializing Companion object\") }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "297a3ecc-df0a-4377-977b-a638f2d1021f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initializing Companion object\n"
+     ]
+    }
+   ],
+   "source": [
+    " // 클래스를 처음 사용할 때 자동적으로 초기화 (companion object를 직접 참조하지 않아도)\n",
+    "val o1 = ObjVsCompanionObj()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f1bedc8a-8aaa-427c-b980-b12bfd200bd0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initializing NotCompanion object\n"
+     ]
+    }
+   ],
+   "source": [
+    "val o2 = ObjVsCompanionObj.NotCompanion // object를 처음 참조할 때 초기화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3834c2b2-27e6-45c8-b18c-8d3b0096bcd4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_28.jupyter.kts (1:1 - 24) Unresolved reference: ObjectVsCompanionObject"
+     ]
+    }
+   ],
+   "source": [
+    "ObjectVsCompanionObject.prop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b97c48f7-d02c-4e8e-9359-fd7972700726",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_29.jupyter.kts (1:1 - 24) Unresolved reference: ObjectVsCompanionObject"
+     ]
+    }
+   ],
+   "source": [
+    "ObjectVsCompanionObject.Companion.prop // Companion은 생략 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5a1abf70-5c1f-4d00-ae9a-81ed13654b9d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_30.jupyter.kts (1:4 - 8) Unresolved reference: prop"
+     ]
+    }
+   ],
+   "source": [
+    "o1.prop // Java의 static과 속성/메소드와 달리 인스턴스를 통해서는 접근 불가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "718c3645-872a-4dc6-9a06-5d4fae29cd5d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ObjVsCompanionObj.NotCompanion.prop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b2095116-08d8-470c-b5d7-4c20446f2076",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_32.jupyter.kts (2:4 - 16) Nested object 'NotCompanion' accessed via instance reference"
+     ]
+    }
+   ],
+   "source": [
+    "// 왜냐하면 원래부터 object 선언은 val이나 var같은 속성 선언이 아니라 클래스 선언의 역할을 하므로 인스턴스를 통해서는 접근 불가\n",
+    "o1.NotCompanion.prop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0bde4bc0-f7e4-4fe1-bf9d-e80fe0fe6cc3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ObjVsCompanionObj.NotCompanion.prop"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf2809dd-df16-4b45-91ae-2ad90e56a126",
+   "id": "ddf9d4eb-aefc-43f4-bf0b-b5672ac5c40f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "// 1.9 부터는 data object가 있다고 한다!!!"
+   ]
   }
  ],
  "metadata": {
