--- a/Chap05b.ipynb
+++ b/Chap05b.ipynb
@@ -870,13 +870,11 @@
    "metadata": {},
    "source": [
     "## Iterators in Kotlin\n",
-    "\n",
-    "### Iterators\n",
-    "### List iterators\n",
-    "### Mutable iterators\n",
-    "### Mutable list iterators\n",
-    "\n",
-    "네 인터페이스의 관계를 나타내는 그림을 이해할 수 있으면 된다."
+    "네 인터페이스의 관계를 나타내는 그림을 이해할 수 있으면 된다.\n",
+    "- **Iterator**: 다음 원소의 위치로 이동하며 읽기\n",
+    "- **ListIterator**: Iterator의 기능에다 직전 원소의 위치로 이동하며 읽기도 가능\n",
+    "- **MutableIterator**: Iterator이면서 삭제도 가능\n",
+    "- **MutableListIterator**: MutableIterator와 ListIterator의 기능에다서 원소 추가 및 변경도 가능\n"
    ]
   },
   {
