--- a/Chap01a.ipynb
+++ b/Chap01a.ipynb
@@ -18,21 +18,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:44:59.105977829Z",
+     "start_time": "2023-07-22T01:44:58.428889269Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "csmxvEZTu3wOSgKSkgJGxQ",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:44:59.105977829Z",
-     "start_time": "2023-07-22T01:44:58.428889269Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "1.8.20"
+      "text/plain": [
+       "1.8.20"
+      ]
      },
      "execution_count": 1,
      "metadata": {},
@@ -47,15 +49,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:00.117017011Z",
+     "start_time": "2023-07-22T01:44:58.974466367Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "DhePRkhgMkZJRyvM9UKY4W",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:00.117017011Z",
-     "start_time": "2023-07-22T01:44:58.974466367Z"
     }
    },
    "outputs": [
@@ -75,15 +77,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.518450183Z",
+     "start_time": "2023-07-22T01:44:59.620845513Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "dYKniKFw8GBGuGOskpyzQR",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:01.518450183Z",
-     "start_time": "2023-07-22T01:44:59.620845513Z"
     }
    },
    "outputs": [],
@@ -94,30 +96,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "datalore": {
-     "hide_input_from_viewers": true,
-     "hide_output_from_viewers": true,
-     "node_id": "TB62Y4X4EYvlU0VK1Kwlsv",
-     "type": "MD"
-    }
-   },
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.656977375Z",
+     "start_time": "2023-07-22T01:45:00.006266772Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "C1WrTGYT7GBOZ9fLj12iqG",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:01.656977375Z",
-     "start_time": "2023-07-22T01:45:00.006266772Z"
     }
    },
    "outputs": [
@@ -190,15 +180,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.719168993Z",
+     "start_time": "2023-07-22T01:45:00.295986028Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "zI5PoFf0UIUANRLkqjj9cI",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:01.719168993Z",
-     "start_time": "2023-07-22T01:45:00.295986028Z"
     }
    },
    "outputs": [],
@@ -210,15 +200,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:01.883881897Z",
+     "start_time": "2023-07-22T01:45:00.665654883Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "6JxPO03UaVz0vNaEFtbqk8",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:01.883881897Z",
-     "start_time": "2023-07-22T01:45:00.665654883Z"
     }
    },
    "outputs": [
@@ -238,14 +228,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-07-22T01:45:01.009374921Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "KDW82U7GeAiTUTedSyyI6D",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "start_time": "2023-07-22T01:45:01.009374921Z"
     }
    },
    "outputs": [
@@ -279,15 +269,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:02.595866789Z",
+     "start_time": "2023-07-22T01:45:01.170296179Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "UW74P8YTxlaUSpgyCQMoYB",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:02.595866789Z",
-     "start_time": "2023-07-22T01:45:01.170296179Z"
     }
    },
    "outputs": [],
@@ -300,21 +290,23 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:03.029880645Z",
+     "start_time": "2023-07-22T01:45:01.505565436Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "dL5xrY6u73pHbQ1vzFmCnO",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:03.029880645Z",
-     "start_time": "2023-07-22T01:45:01.505565436Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "class kotlin.Int"
+      "text/plain": [
+       "class kotlin.Int"
+      ]
      },
      "execution_count": 9,
      "metadata": {},
@@ -329,21 +321,23 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-22T01:45:03.073790050Z",
+     "start_time": "2023-07-22T01:45:01.873556216Z"
+    },
     "datalore": {
      "hide_input_from_viewers": true,
      "hide_output_from_viewers": true,
      "node_id": "dO4mgySLe5k57QYpMDNQrL",
      "type": "CODE"
-    },
-    "ExecuteTime": {
-     "end_time": "2023-07-22T01:45:03.073790050Z",
-     "start_time": "2023-07-22T01:45:01.873556216Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "class kotlin.String"
+      "text/plain": [
+       "class kotlin.String"
+      ]
      },
      "execution_count": 10,
      "metadata": {},
@@ -516,7 +510,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0.12345123451234512"
+      "text/plain": [
+       "0.12345123451234512"
+      ]
      },
      "execution_count": 16,
      "metadata": {},
@@ -541,7 +537,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "true"
+      "text/plain": [
+       "true"
+      ]
      },
      "execution_count": 17,
      "metadata": {},
@@ -566,7 +564,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0.12345123"
+      "text/plain": [
+       "0.12345123"
+      ]
      },
      "execution_count": 18,
      "metadata": {},
@@ -591,7 +591,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "true"
+      "text/plain": [
+       "true"
+      ]
      },
      "execution_count": 19,
      "metadata": {},
@@ -640,7 +642,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "true"
+      "text/plain": [
+       "true"
+      ]
      },
      "execution_count": 21,
      "metadata": {},
@@ -665,7 +669,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "false"
+      "text/plain": [
+       "false"
+      ]
      },
      "execution_count": 22,
      "metadata": {},
@@ -738,7 +744,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "false"
+      "text/plain": [
+       "false"
+      ]
      },
      "execution_count": 24,
      "metadata": {},
@@ -763,7 +771,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "true"
+      "text/plain": [
+       "true"
+      ]
      },
      "execution_count": 25,
      "metadata": {},
@@ -788,7 +798,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "false"
+      "text/plain": [
+       "false"
+      ]
      },
      "execution_count": 26,
      "metadata": {},
@@ -813,7 +825,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "false"
+      "text/plain": [
+       "false"
+      ]
      },
      "execution_count": 27,
      "metadata": {},
@@ -948,7 +962,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "true"
+      "text/plain": [
+       "true"
+      ]
      },
      "execution_count": 32,
      "metadata": {},
@@ -1027,7 +1043,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "\nSum of  3\n    and 4\nis      7\n"
+      "text/plain": [
+       "\n",
+       "Sum of  3\n",
+       "    and 4\n",
+       "is      7\n"
+      ]
      },
      "execution_count": 35,
      "metadata": {},
@@ -1058,6 +1079,9 @@
    "language": "kotlin",
    "name": "kotlin"
   },
+  "ktnbPluginMetadata": {
+   "isAddProjectLibrariesToClasspath": false
+  },
   "language_info": {
    "codemirror_mode": "text/x-kotlin",
    "file_extension": ".kt",
@@ -1066,9 +1090,6 @@
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
    "version": "1.8.20-Beta"
-  },
-  "ktnbPluginMetadata": {
-   "isAddProjectLibrariesToClasspath": false
   }
  },
  "nbformat": 4,
