--- a/Chap03c.ipynb
+++ b/Chap03c.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "605b5154-a30d-4b33-8220-020c8436389c",
    "metadata": {
     "tags": []
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "5025bbd1-a106-45c6-8f1b-6c29924bb7fe",
    "metadata": {
     "tags": []
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "03e8135b-118a-430b-a29d-3b417dc63a68",
    "metadata": {
     "tags": []
@@ -248,48 +248,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cca7659-ad4a-491a-9af3-52c40920d173",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Polymorphism\n",
-    "\n",
-    "TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d998d7ee-6d58-4e59-972e-d0acf4d7c146",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "446d3bef-2a93-4f8a-a1df-11d34dbd5186",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9cb651a-313c-40db-a689-f3a6ea3f2f4e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f065ff5-2355-40f4-8f5b-e270fc7e2a75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "1838dc54-c2f5-43a3-85ac-70651fddd8d8",
    "metadata": {},
    "source": [
@@ -298,12 +256,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cca7659-ad4a-491a-9af3-52c40920d173",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Polymorphism\n",
+    "\n",
+    "보통 \"다형성\"으로 옮기는 polymorphism은 하나의 개념이 아니며 프로그래밍언어에 나타나는 다양성의 종류도 다양.\n",
+    "\n",
+    "위키피디아만 뒤져봐도\n",
+    "- parametric polymorphism (매개변수 다형성): 코틀린을 기준으로 이야기하자면 제네릭(generic)에 해당\n",
+    "- 그 외의 다형성\n",
+    "  - ad-hoc polymorphism (임시변통 다형성): 함수 혹은 연산자 오버로딩\n",
+    "  - subtype (or, inclusion) polymorphism (하위타입 다형성): 각각의 하위 타입(즉, 하위 클래스 혹은 인터페이스의 구현)의 특성에 따라 조금씩 특화된 다른 동작을, 상위 타입의 관점에서 같은 동작으로 취급하여 처리할 수 있음. 반대로 이야기해 보자면, 상위 타입의 관점에서 일괄적으로 처리하더라도 각각의 하위 타입의 특성에 따라 알아서 적절히 조금씩 알아서 다르게 동작함.\n",
+    "  \n",
+    "전통적으로 OOP에서 강조하는 다형성은 subtype polymorphism이지만 요즘 정적 타입 언어들은 위에서 언급한 다른 종류의 다형성들도 다같이 지원하니까 기본적으로 다 알아야\n",
+    "\n",
+    "코틀린과 같은 OOPL에서는 subtype polymorphism을 지원하기 위해 overriding된 함수를 late binding 혹은 dynamic dispatch 한다고 전문용어로는 그렇게 말한다"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a0450d6-bc1c-44b4-ac4d-e8a22d2cd492",
+   "execution_count": 10,
+   "id": "c9650ac4-8f38-4638-831d-4f9496fc858e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "abstract class Animal {\n",
+    "    abstract fun makeSound()\n",
+    "}\n",
+    "\n",
+    "open class Bird: Animal() {\n",
+    "    override fun makeSound() = println(\"tweet\")\n",
+    "}\n",
+    "\n",
+    "class Duck: Bird() {\n",
+    "    override fun makeSound() = println(\"quack\")\n",
+    "}\n",
+    "\n",
+    "open class Bear: Animal() {\n",
+    "    override fun makeSound() = println(\"grawl\")\n",
+    "}\n",
+    "\n",
+    "class MemeBear: Bear() {\n",
+    "    override fun makeSound() = println(\"쮸쀼쮸쀼\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "446d3bef-2a93-4f8a-a1df-11d34dbd5186",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "val bird: Bird = Bird()\n",
+    "val duck: Duck = Duck()\n",
+    "val bear: Bear = Bear()\n",
+    "val mmbr: MemeBear = MemeBear()\n",
+    "\n",
+    "val a0: Animal = bird // 하위 타입 Bird를 상위 타입 Animal으로 자연스럽게 변환\n",
+    "val a1: Animal = duck // 하위 타입 Duck을 상위 타입 Animal으로 자연스럽게 변환\n",
+    "val a2: Animal = bear // 하위 타입 Bear를 상위 타입 Animal으로 자연스럽게 변환\n",
+    "val a3: Animal = mmbr // 하위 타입 MemeBear를 상위 타입 Animal으로 자연스럽게 변환\n",
+    "\n",
+    "val animals = listOf( a0, a1, a2, a3 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0f7bae52-821f-46e3-96f6-c9c97f2a8d55",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tweet\n",
+      "quack\n",
+      "grawl\n",
+      "쮸쀼쮸쀼\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (a in animals) { a.makeSound() }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c9cb651a-313c-40db-a689-f3a6ea3f2f4e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tweet\n",
+      "quack\n",
+      "grawl\n",
+      "쮸쀼쮸쀼\n"
+     ]
+    }
+   ],
+   "source": [
+    "val animals: List<Animal> = listOf( Bird(), Duck(), Bear(), MemeBear() )\n",
+    "\n",
+    "for (a in animals) { a.makeSound() }"
+   ]
   },
   {
    "cell_type": "code",
