--- a/Chap04a.ipynb
+++ b/Chap04a.ipynb
@@ -676,11 +676,11 @@
    "metadata": {},
    "source": [
     "### Companion objects\n",
-    "클래스 안에 있는 오브젝트이지만 이름 없이 투명해서 클래스를 통해서 직접 속성/함수에 접근 가능\n",
+    "클래스 안에 있는 오브젝트이지만 오브젝트 이름을 언급하지 않고 투명한듯 통과해서 클래스 이름만을 통해 속성/함수에 접근 가능\n",
     "\n",
-    "Java의 경우 클래스 안에서 static으로 선언하는 클래스 속성 및 클래스 메소드에 해당하는 기능을 Kotlin에서 작성할 때 활용 가능\n",
+    "Java의 경우 클래스 안에서 static으로 선언하는 클래스 변수 및 클래스 메소드에 해당하는 기능을 Kotlin에서 작성할 때 활용 가능\n",
     "\n",
-    "Java의 클래스 속성/메소드와 차이점은 Kotlin의 companion object는 \n",
+    "Java의 클래스 변수/메소드와 차이점은 Kotlin의 companion object는 \n",
     "- class의 역할도 하므로 클래스 상속이나 인터페이스와 함께 선언 가능\n",
     "- 클래스 이름으로만 접근 가능하고 인스턴스를 통해서는 접근 불가능"
    ]
