--- a/Chap11.ipynb
+++ b/Chap11.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "735f9fce-e18b-4261-ae7a-c42945a0c365",
+   "metadata": {},
+   "source": [
+    "# 11. Testing OOP with Kotlin\n",
+    "\n",
+    "이건 아마도 수업시간에 여기까지 진도가 못나갈 거 같은데 혹시 나간다면 약간의 준비작업"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "930ddf2f-3e1e-4d99-a37c-dd660b857f5c",
