--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "/* sealed */ interface Entry { // Java 17부터는 sealed가 지원된다고 하더라 \n",
+    "sealed interface Entry { \n",
     "    enum BinOp implements Entry { ADD, MULT }\n",
     "    record Value(int number) implements Entry { } \n",
     "}\n",
