change Pair record definition

--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -11,7 +11,7 @@
     "    record Value(int number) implements Entry { } \n",
     "}\n",
     "\n",
-    "record Pair<A,B>(A a, B b) { }\n",
+    "record Pair<A,B>(A first, B second) { }\n",
     "\n",
     "interface ICalculator {\n",
     "    boolean appendEntry(Entry e); // input either BinOp or Vaule\n",
