modify return type

--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -26,7 +26,7 @@
     "        // clear current entries and nullify last calculated value\n",
     "    Entry.Value lastValue(); // last calculated value\n",
     "    List<Entry> entries();  // current entries\n",
-    "    List<Pair<Entry, Entry.Value>> history();  // history of calculations\n",
+    "    Pair<List<Entry>, Entry.Value> history();  // history of calculations\n",
     "    void clearEntries(); // clear the current entries, also clearing last calculate value\n",
     "    void clearHistory(); // clear history\n",
     "}"
